:bug: Fix sidebar resizers being visible above modals

--- a/src/settings-renderer/components/common/Modal.module.scss
+++ b/src/settings-renderer/components/common/Modal.module.scss
@@ -11,7 +11,7 @@
 @use '../../variables.scss' as *;
 
 .modalBackground {
-  z-index: 10;
+  z-index: 50;
 
   -webkit-app-region: no-drag;
   background-color: $modal-background;
