--- a/src/settings-renderer/components/common/Sidebar.module.scss
+++ b/src/settings-renderer/components/common/Sidebar.module.scss
@@ -35,7 +35,7 @@
   cursor: ew-resize;
   opacity: 0.1;
   transition: opacity 0.2s;
-  z-index: 50;
+  z-index: 10;
 
   &.left {
     margin-right: -10px;
